# hootenanny-conan

./: .gitignore  CMakeLists.txt  Makefile  README.md  Vagrantfile  conandata.yml  conanfile.py  hoot_profile
docs/: Install.md
patches/0.2.64b/: CMakeLists.txt  HootConfig.h  HootEnv.sh  TgsConfig.h  VersionDefines.h  hoot  hoot.patch
